--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
 collections:
   projects:
-    
+  notes:
+    output: true
+
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: "default"
