--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,6 +19,20 @@
                 "showReuseMessage": true,
                 "clear": false
             }
+        },
+        {
+            "label": "Serve jekyll",
+            "type": "shell",
+            "command": "docker run --rm --volume=${workspaceFolder}:/srv/jekyll -it -p 4000:4000 jekyll/minimal:3.8 jekyll serve",
+            "presentation": {
+                "echo": false,
+                "reveal": "never",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            },
+            "problemMatcher": []
         }
     ]
 }
